--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <script>
 let socket;
 // 🔥 Hardcode your Render backend URL here
-const BACKEND_URL = "https://your-render-app.onrender.com";  
+const BACKEND_URL = "https://chatroom-kikj.onrender.com";  
 let currentUser = "";
 
 // Login handler
